{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 547,
  "lineage": "58a91ea5-fe8e-d228-353f-8532e875485c",
  "resources": [
    {
      "module": "module.efs",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:vpc/vpc-0a48d5cc09397ab48",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-005d35d75badb07dd",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0c3264ce764ccd073",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a48d5cc09397ab48",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b2fbf6d1b7c7bace",
            "owner_id": "421576594835",
            "tags": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:security-group/sg-057b341b9c0bda612",
            "description": "Allow nfs inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057b341b9c0bda612",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "nfs from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs_security_group",
            "name_prefix": "",
            "owner_id": "421576594835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs_security_group"
            },
            "tags_all": {
              "Name": "efs_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a48d5cc09397ab48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.efs.data.aws_vpc.vpc",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_eks_node_group.eks_node",
            "module.eks.aws_iam_openid_connect_provider.aws_OIDC",
            "module.eks.aws_iam_policy.AmazonEKS_AWS_Load_Balancer_Controller",
            "module.eks.aws_iam_policy.AmazonEKS_EFS_CSI_Driver_Policy",
            "module.eks.aws_iam_role.eks_SA_alb_iam_role",
            "module.eks.aws_iam_role.eks_SA_efs_iam_role",
            "module.eks.aws_iam_role.eks_cluster_iam_role",
            "module.eks.aws_iam_role.eks_node_iam_role",
            "module.eks.aws_iam_role_policy_attachment.eks_SA_iam_role-AmazonEKS_AWS_Load_Balancer_Controller",
            "module.eks.aws_iam_role_policy_attachment.eks_SA_iam_role-AmazonEKS_EFS_CSI_Driver_Policy",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_iam_role-AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_iam_role-AmazonEKSVPCResourceController",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_iam_role-AmazonEKS_CNI_Policy",
            "module.eks.aws_iam_role_policy_attachment.eks_node_iam_role-AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.eks_node_iam_role-AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.eks_node_iam_role-AmazonEKS_CNI_Policy",
            "module.eks.data.aws_iam_policy_document.iam_policy_OIDC_assume_role_policy_SA_alb",
            "module.eks.data.aws_iam_policy_document.iam_policy_OIDC_assume_role_policy_SA_efs",
            "module.eks.data.aws_iam_roles.sa_roles",
            "module.eks.data.aws_subnets.private_subnets",
            "module.eks.data.aws_subnets.vpc_subnets",
            "module.eks.data.tls_certificate.eks_tls_cert",
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.PrivateRT",
            "module.vpc.aws_route_table.PublicRT",
            "module.vpc.aws_route_table_association.PrivateRTassociation",
            "module.vpc.aws_route_table_association.PublicRTassociation",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbc5d117ad6364b3",
            "association_id": "eipassoc-09a8dfb8fcdce4376",
            "domain": "vpc",
            "id": "eipalloc-0fbc5d117ad6364b3",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0cd1a3ea98405786b",
            "private_dns": "ip-10-0-1-39.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.39",
            "public_dns": "ec2-3-37-82-71.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.82.71",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c81aa8b977d3392b",
            "association_id": "eipassoc-091d784c7219aed1e",
            "domain": "vpc",
            "id": "eipalloc-0c81aa8b977d3392b",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0d83428315a283892",
            "private_dns": "ip-10-0-2-36.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.36",
            "public_dns": "ec2-15-165-14-211.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.14.211",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:internet-gateway/igw-0f6a85acdcc6c8816",
            "id": "igw-0f6a85acdcc6c8816",
            "owner_id": "421576594835",
            "vpc_id": "vpc-0a48d5cc09397ab48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbc5d117ad6364b3",
            "connectivity_type": "public",
            "id": "nat-031f0b2bcbe7e020a",
            "network_interface_id": "eni-0cd1a3ea98405786b",
            "private_ip": "10.0.1.39",
            "public_ip": "3.37.82.71",
            "subnet_id": "subnet-002806d2be98f076c"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c81aa8b977d3392b",
            "connectivity_type": "public",
            "id": "nat-0ac1502cf63d4b748",
            "network_interface_id": "eni-0d83428315a283892",
            "private_ip": "10.0.2.36",
            "public_ip": "15.165.14.211",
            "subnet_id": "subnet-01c0ebca472e80dac"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:route-table/rtb-09a9e872b48d4c95f",
            "id": "rtb-09a9e872b48d4c95f",
            "owner_id": "421576594835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-031f0b2bcbe7e020a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a48d5cc09397ab48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:route-table/rtb-029adbda191e1d906",
            "id": "rtb-029adbda191e1d906",
            "owner_id": "421576594835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ac1502cf63d4b748",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a48d5cc09397ab48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:route-table/rtb-02b8bb61c0e9146f2",
            "id": "rtb-02b8bb61c0e9146f2",
            "owner_id": "421576594835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6a85acdcc6c8816",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a48d5cc09397ab48"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0220fc94959f7100c",
            "route_table_id": "rtb-09a9e872b48d4c95f",
            "subnet_id": "subnet-02e8f597848e0165a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.PrivateRT",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045efaf5a96211f3a",
            "route_table_id": "rtb-029adbda191e1d906",
            "subnet_id": "subnet-0b8812d38ead8ac80"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.PrivateRT",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af3cd516f8d1c1ae",
            "route_table_id": "rtb-02b8bb61c0e9146f2",
            "subnet_id": "subnet-002806d2be98f076c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.PublicRT",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef9212b210535e2d",
            "route_table_id": "rtb-02b8bb61c0e9146f2",
            "subnet_id": "subnet-01c0ebca472e80dac"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.PublicRT",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:subnet/subnet-02e8f597848e0165a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e8f597848e0165a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421576594835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_1",
              "kubernetes.io/cluster/eks_ctl": "shared"
            },
            "tags_all": {
              "Name": "Private_Subnet_1",
              "kubernetes.io/cluster/eks_ctl": "shared"
            },
            "vpc_id": "vpc-0a48d5cc09397ab48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:subnet/subnet-0b8812d38ead8ac80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8812d38ead8ac80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421576594835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_2",
              "kubernetes.io/cluster/eks_ctl": "shared"
            },
            "tags_all": {
              "Name": "Private_Subnet_2",
              "kubernetes.io/cluster/eks_ctl": "shared"
            },
            "vpc_id": "vpc-0a48d5cc09397ab48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:subnet/subnet-002806d2be98f076c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002806d2be98f076c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421576594835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_1"
            },
            "tags_all": {
              "Name": "Public_Subnet_1"
            },
            "vpc_id": "vpc-0a48d5cc09397ab48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:subnet/subnet-01c0ebca472e80dac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c0ebca472e80dac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421576594835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_2"
            },
            "tags_all": {
              "Name": "Public_Subnet_2"
            },
            "vpc_id": "vpc-0a48d5cc09397ab48"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:vpc/vpc-0a48d5cc09397ab48",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba50e4d8cf3f1c80",
            "default_route_table_id": "rtb-0b2fbf6d1b7c7bace",
            "default_security_group_id": "sg-0080f2d807980eb2e",
            "dhcp_options_id": "dopt-0c3264ce764ccd073",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a48d5cc09397ab48",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2fbf6d1b7c7bace",
            "owner_id": "421576594835",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}